--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^1.19.1"
+  }
 }
